[project]
name = "hw7-agentic-rare-dx"
version = "0.1.0"
description = "Homework 7 rare-disease differential diagnosis project"
requires-python = ">=3.11,<3.13"
dependencies = [
    "chromadb>=0.5",
    "datasets>=2.19",
    "ipykernel>=6.29",
    "jupyterlab>=4.2",
    "langchain-openai>=0.3",
    "langgraph>=0.2",
    "matplotlib>=3.9",
    "networkx>=3.3",
    "numpy>=2.1",
    "openai>=2.31.0",
    "pandas>=2.2",
    "pronto>=2.7",
    "pyarrow>=18.0",
    "pydantic>=2.7",
    "python-dotenv>=1.0",
    "pyyaml>=6.0",
    "requests>=2.32",
    "scikit-learn>=1.5",
    "seaborn>=0.13",
    "streamlit>=1.39",
    "graphviz>=0.20",
    "tqdm>=4.66",
]

[tool.uv]
package = false
